@@ -1,3 +1,7 @@
+31/10/13
+  Fix for windows not moving desktops with multiple monitors
+   in stacking mode
+
 22/10/13
   Fix for focus not changing when transient window had focus
    and current window was clicked on
